hphp/hack/test/typecheck/await_in_expressions7.php.exp
File "await_in_expressions7.php", line 6, characters 10-17:
`await` cannot be used as an expression in this location because it's conditionally executed. (Parsing[1002])
